<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".presentation.activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="fitCenter"
        android:src="@drawable/main_img" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/add_location_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/add_location"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/visited_locations_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/view_all_visited"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>
