<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.MainMenuActivity">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".presentation.activities.MainMenuActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CC000000"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6ffffff" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/form_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/location_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Location"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/location_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="Location"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextNote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/note"
                            android:inputType="textMultiLine" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/gallery"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/button_take_image"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="16dp"
                            android:src="@drawable/icon_camera" />

                        <ImageView
                            android:id="@+id/button_add_from_gallery"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:src="@drawable/icon_gallery" />

                    </LinearLayout>

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/memory_image"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:maxHeight="160dp"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/video"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/button_add_video"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:src="@drawable/icon_add_video" />

                    </LinearLayout>

                    <VideoView
                        android:id="@+id/memory_video"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="380dp"
                        android:layout_marginBottom="80dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/actions_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/change_location_button"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.7"
                android:descendantFocusability="beforeDescendants"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_back" />

                <TextView
                    android:id="@+id/change_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:background="@android:color/transparent"
                    android:gravity="left|center"
                    android:paddingRight="12dp"
                    android:text="@string/change_location"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSaveLocation"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:descendantFocusability="beforeDescendants"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="right|center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="right|center"
                    android:paddingLeft="12dp"
                    android:paddingRight="4dp"
                    android:text="@string/save_location"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_next" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>