<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.MainMenuActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="8dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_map"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:text="@string/app_name"
                        android:textColor="#ffffff"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/activity_main"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6ffffff" />

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/locations_marked_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:scrollbars="vertical" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/empty_list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/empty_list_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/empty_list_description"/>

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:background="@color/colorAccent"
        android:layout_margin="24dp"
        android:src="@drawable/icon_add"
        app:fabSize="normal"
        app:useCompatPadding="false" />

</android.support.design.widget.CoordinatorLayout>
