<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="8dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/app_name">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/button_edit_location"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/icon_edit" />

                    <ImageView
                        android:id="@+id/button_delete_location"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/icon_delete" />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:descendantFocusability="blocksDescendants"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E6ffffff" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/location_image"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="12dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingTop="12dp">


                        <TextView
                            android:id="@+id/location_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/location_address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/location_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="12dp"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:background="@color/colorAccent" />

                        <TextView
                            android:id="@+id/location_note_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="12dp"
                            android:text="@string/note"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/location_note"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="12dp"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/location_video_label"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="12dp"
                            android:text="@string/video"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <VideoView
                            android:id="@+id/location_video"
                            android:visibility="gone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="12dp"
                            android:layout_marginBottom="80dp"
                            android:scaleType="centerCrop" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/location_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:background="@color/colorAccent"
        android:layout_margin="24dp"
        android:src="@drawable/icon_location"
        app:fabSize="normal"
        app:useCompatPadding="false" />

</android.support.design.widget.CoordinatorLayout>
